--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "hybrid-vue3",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.2.25"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^2.0.0",
-    "vite": "^2.7.2"
-  }
+	"name": "hybrid-vue3",
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"vue": "^3.2.25"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^2.0.0",
+		"sass": "^1.45.2",
+		"vite": "^2.7.2"
+	}
 }
