--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"axios": "^0.24.0",
+		"swiper": "^7.4.1",
 		"vue": "^3.2.25",
 		"vue-router": "^4.0.12"
 	},
